@@ -8,6 +8,8 @@ v7.14.0 (unreleased)
   - Refactor GitLab API usage to use either access_token or private_token depending on what was specified during login
   - Allow to use access_token for API requests
 
+  - Added support for CI skipped status
+  
 v7.13.1
   - Fix: user could steal specific runner
   - Fix: don't send notifications for jobs with allow_failure set
